# -Dify-

./: .gitignore  Dify 知识库接口文档.md  Dify 知识库文档支持类型.md  Dify平台实施指南-详细步骤.md  README-RuyiDify.md  README.md  findings.md  progress.md  task_plan.md  项目目录结构规范.md
.github/workflows/: autofix.yml  main-ci.yml  style.yml  translate-i18n-claude.yml  web-e2e.yml
api/: pyproject.toml
data/: CNC故障案例集.md  eval_questions.csv  eval_results.json
deploy/: .env.template  docker-compose.override.yaml  restore-snapshot.ps1  restore-snapshot.sh  sanitize-for-release.sh  setup-hardening.sh  startup.ps1  startup.sh  verify-setup.sh  队友部署说明.md
docs/: Dify平台实施指南-详细步骤.md  KNOWLEDGE_BASE_GUIDE.md  PRD与技术架构.md  Workflow调试指南.md  分发前清理清单.md  性能压测简案.md  手动配置清单.md  手工验收清单.md  故障应急卡.md  知识库创建指南.md  知识库调优建议.md  自定义工具配置.md  节点配置参数清单.md  部署检查清单.md
scripts/: add_keywords_to_kb.py  fix_report.py  fix_report_3spots.py  insert_report_images.py  insert_team_table.py  make_unique_named_copy.py  rebuild_parent_kb_fulldoc.py
src/: requirements.txt
src/docx/: .gitignore  README.md  SKILL.md  pyproject.toml
src/docx/examples/: create_report.py
src/docx/src/ruyi_docx/: __init__.py  editor.py  errors.py  mcp_server.py  models.py  ooxml.py  reader.py  renderer.py  service.py  styles.py  templates.py  validator.py  writer.py
src/docx/src/ruyi_docx/adapters/: __init__.py  mcp.py
src/docx/tests/: test_adapters.py  test_course_generator.py  test_editor.py  test_writer_reader.py
制造业设备维修知识库/: README.md  dify_import_report.json  evaluation_questions.csv  knowledge_manifest.csv  sources.csv
(+118 files in other folders)
